<resources>
    <string name="app_name">Peliculas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estrenos">Estrenos</string>
    <string name="registrate">Registrate</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuario</string>

    <string name="nav_home">Inicio</string>
    <string name="nav_action">Accion</string>
    <string name="nav_horrot">Terror</string>
    <string name="nav_comedy">Comedia</string>
    <string name="nav_fantasy">Fantasia</string>
    <string name="nav_drama">Drama</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_logout">Cerrar Sesion</string>
    <string name="synopsis">Sinopsis</string>
    <string name="open_menu">Menu Abierto</string>
    <string name="close_menu">Menu Cerrado</string>
</resources>
